--- a/package.json
+++ b/package.json
@@ -1,47 +1,51 @@
 {
-  "name": "nuxt-tsx",
-  "version": "1.0.0",
-  "description": "Nuxt.js build with TypeScript and TSX support",
   "author": "Niko Pettersen <niko.pettersen@newthings.co> (https://www.newthings.co)",
-  "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "test": "jest"
+  "dependencies": {
+    "@nuxtjs/axios": "^5.8.0",
+    "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/pwa": "^3.0.0-0",
+    "nuxt": "^2.10.2"
   },
-  "lint-staged": {
-    "*.{js,vue}": "eslint"
+  "description": "Nuxt.js build with TypeScript and TSX support",
+  "devDependencies": {
+    "@nuxtjs/eslint-config": "^2.0.0",
+    "@nuxtjs/eslint-module": "^1.1.0",
+    "@nuxtjs/stylelint-module": "^3.1.1",
+    "@vue/test-utils": "^1.0.0-beta.27",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-nuxt": ">=0.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "husky": "^3.1.0",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "stylelint": "^12.0.0",
+    "vue-jest": "^4.0.0-0"
+  },
+  "engines": {
+    "node": "~12.13.0",
+    "npm": "~6.13.0"
   },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
   },
-  "dependencies": {
-    "nuxt": "^2.10.2",
-    "@nuxtjs/axios": "^5.8.0",
-    "@nuxtjs/pwa": "^3.0.0-0",
-    "@nuxtjs/dotenv": "^1.4.1"
+  "lint-staged": {
+    "*.{js,vue}": "eslint"
   },
-  "devDependencies": {
-    "@nuxtjs/eslint-config": "^2.0.0",
-    "@nuxtjs/eslint-module": "^1.1.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-nuxt": ">=0.5.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.19.1",
-    "husky": "^3.1.0",
-    "lint-staged": "^9.5.0",
-    "@nuxtjs/stylelint-module": "^3.1.1",
-    "stylelint": "^12.0.0",
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-jest": "^24.9.0",
-    "jest": "^24.9.0",
-    "vue-jest": "^4.0.0-0"
-  }
+  "name": "nuxt-tsx",
+  "private": true,
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt",
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "start": "nuxt start",
+    "test": "jest"
+  },
+  "version": "1.0.0"
 }
