--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-jest": "^24.9.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-json": "^2.0.1",
     "eslint-plugin-nuxt": ">=0.5.0",
     "eslint-plugin-prettier": "^3.1.1",
     "husky": "^3.1.0",
@@ -43,7 +44,7 @@
     "build": "nuxt build",
     "dev": "nuxt",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "eslint --ext .js,.json,.vue --ignore-path .gitignore .",
     "start": "nuxt start",
     "test": "jest"
   },
