--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,vue}": "eslint"
+    "*.{js,json,vue}": "npm run lint"
   },
   "name": "nuxt-tsx",
   "private": true,
