--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "description": "Nuxt.js build with TypeScript and TSX support",
   "devDependencies": {
+    "@nuxt/typescript-build": "^0.5.1",
     "@nuxtjs/eslint-config": "^2.0.0",
+    "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.1.0",
     "@nuxtjs/stylelint-module": "^3.1.1",
     "@vue/test-utils": "^1.0.0-beta.27",
@@ -44,8 +46,8 @@
     "build": "nuxt build",
     "dev": "nuxt",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.json,.vue --ignore-path .gitignore .",
-    "lint:fix": "eslint --ext .js,.json,.vue --fix --ignore-path .gitignore .",
+    "lint": "eslint --ext .js,.json,.ts,.vue --ignore-path .gitignore .",
+    "lint:fix": "eslint --ext .js,.json,.ts,.vue --fix --ignore-path .gitignore .",
     "start": "nuxt start",
     "test": "jest"
   },
