--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.1.0",
     "@nuxtjs/stylelint-module": "^3.1.1",
+    "@vue/composition-api": "^0.3.4",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
+    "babel-preset-vca-jsx": "^0.3.4",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-json": "^2.0.1",
@@ -24,10 +26,13 @@
     "husky": "^3.1.0",
     "jest": "^24.9.0",
     "lint-staged": "^9.5.0",
+    "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
+    "sass-loader": "^8.0.0",
     "stylelint": "^12.0.0",
     "stylelint-order": "^3.1.1",
-    "vue-jest": "^4.0.0-0"
+    "vue-jest": "^4.0.0-0",
+    "vue-tsx-support": "^2.3.2"
   },
   "engines": {
     "node": "~12.13.0",
