--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "sass-loader": "^8.0.0",
     "stylelint": "^12.0.0",
     "stylelint-order": "^3.1.1",
-    "vue-jest": "^4.0.0-0",
-    "vue-tsx-support": "^2.3.2"
+    "vue-jest": "^4.0.0-0"
   },
   "engines": {
     "node": "~12.13.0",
