feat(tests): Add Cypress + end-to-end tests

--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "babel-jest": "^24.9.0",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-preset-vca-jsx": "^0.3.4",
+    "cypress": "^3.8.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.8.0",
+    "eslint-plugin-cypress": "^2.8.1",
+    "eslint-plugin-jest": "^23.1.1",
     "eslint-plugin-json": "^2.0.1",
     "eslint-plugin-nuxt": ">=0.5.0",
     "eslint-plugin-prettier": "^3.1.2",
@@ -35,6 +38,7 @@
     "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.0",
+    "start-server-and-test": "^1.10.6",
     "stylelint": "^12.0.1",
     "stylelint-order": "^3.1.1",
     "ts-jest": "^24.2.0",
@@ -56,12 +60,14 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
+    "cypress:run": "cypress run --config-file .cypress.json",
     "dev": "nuxt",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.json,.ts,.tsx --ignore-path .gitignore .",
     "lint:fix": "eslint --ext .js,.json,.ts,.tsx --fix --ignore-path .gitignore .",
     "start": "nuxt start",
-    "test": "npm run test:unit",
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:e2e": "nuxt generate && start-test start 3000 cypress:run",
     "test:unit": "jest",
     "test:update": "npm run test:unit -- -u"
   },
