--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,15 @@
 .*
 
 # Coverage directory used by istanbul
-coverage
+tests/coverage
+
+# Cypress
+tests/e2e/cypress/screenshots/**
+tests/e2e/cypress/videos/*.mp4
 
 # Exceptions
 !.babelrc.json
+!.cypress.json
 !.eslintrc.json
 !.gitignore
 !.gitkeep
