feat(build): Add post-install script
- Creates `.env` file if it doesn't exist

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ tests/e2e/cypress/videos/*.mp4
 # Exceptions
 !.babelrc.json
 !.cypress.json
+!.env.example
 !.eslintrc.json
 !.gitignore
 !.gitkeep
