--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "sourceMap": true,
     "strict": true,
     "target": "es2018",
-    "types": ["@nuxt/types", "node"]
+    "types": ["@nuxt/types", "node", "types"]
   },
   "exclude": ["dist", "node_modules", "static", "tests/coverage", "tests/e2e"],
   "extension": [".ts", ".tsx"]
