--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "stylelint-order": "^3.1.1",
     "ts-jest": "^24.2.0",
     "ts-node": "^8.5.4",
-    "vue-jest": "^4.0.0-0"
+    "vue-jest": "^4.0.0-0",
+    "vuepress": "^1.2.0"
   },
   "engines": {
     "node": "~12.13.0",
@@ -65,6 +66,8 @@
     "build": "nuxt build",
     "cypress:run": "cypress run --config-file .cypress.json",
     "dev": "nuxt",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
     "generate": "nuxt generate",
     "lint:fix": "eslint --ext .js,.json,.ts,.tsx --fix --ignore-path .gitignore .",
     "lint": "eslint --ext .js,.json,.ts,.tsx --ignore-path .gitignore .",
