--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged && npm run test:unit"
     }
   },
   "lint-staged": {
