--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "stylelint": "^12.0.1",
     "stylelint-order": "^3.1.1",
     "ts-jest": "^24.2.0",
-    "ts-node": "^8.5.4",
     "vue-jest": "^4.0.0-0",
     "vuepress": "^1.2.0"
   },
@@ -74,7 +73,7 @@
     "generate": "nuxt generate",
     "lint:fix": "eslint --ext .js,.json,.ts,.tsx --fix --ignore-path .gitignore .",
     "lint": "eslint --ext .js,.json,.ts,.tsx --ignore-path .gitignore .",
-    "postinstall": "ts-node scripts/postinstall.ts",
+    "postinstall": "scripts/postinstall.sh",
     "start": "nuxt start",
     "test:ci": "jest && nuxt generate && start-test start 3000 cypress:ci",
     "test:e2e": "nuxt generate && start-test start 3000 cypress:run",
