--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
   "author": "Niko Pettersen <niko.pettersen@newthings.co> (https://www.newthings.co)",
   "dependencies": {
-    "@nuxtjs/axios": "^5.9.2",
+    "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
     "nuxt": "^2.11.0"
   },
   "description": "Nuxt.js build with TypeScript and TSX support",
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^4.1.1",
-    "@nuxt/typescript-build": "^0.5.5",
-    "@nuxtjs/eslint-config": "^2.0.0",
-    "@nuxtjs/eslint-config-typescript": "^1.0.0",
+    "@nuxt/typescript-build": "^0.5.6",
+    "@nuxtjs/eslint-config": "^2.0.2",
+    "@nuxtjs/eslint-config-typescript": "^1.0.2",
     "@nuxtjs/eslint-module": "^1.1.0",
-    "@nuxtjs/stylelint-module": "^3.1.1",
-    "@types/jest": "^24.0.25",
-    "@vue/babel-preset-app": "^4.1.2",
+    "@nuxtjs/stylelint-module": "^3.2.2",
+    "@types/jest": "^25.1.2",
+    "@vue/babel-preset-app": "^4.2.2",
     "@vue/composition-api": "^0.3.4",
-    "@vue/test-utils": "^1.0.0-beta.27",
+    "@vue/test-utils": "^1.0.0-beta.31",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
+    "babel-jest": "^25.1.0",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-preset-vca-jsx": "^0.3.4",
-    "cypress": "^3.8.1",
+    "cypress": "^4.0.1",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-cypress": "^2.8.1",
-    "eslint-plugin-jest": "^23.4.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-cypress": "^2.9.0",
+    "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-json": "^2.0.1",
-    "eslint-plugin-nuxt": ">=0.5.0",
+    "eslint-plugin-nuxt": ">=0.5.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^4.0.6",
-    "jest": "^24.9.0",
+    "husky": "^4.2.3",
+    "jest": "^25.1.0",
     "jest-serializer-vue": "^2.0.2",
-    "jsdom": "^15.2.1",
+    "jsdom": "^16.1.0",
     "jsdom-global": "^3.0.2",
-    "lint-staged": "^9.5.0",
-    "node-sass": "^4.13.0",
+    "lint-staged": "^10.0.7",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
-    "sass-loader": "^8.0.0",
-    "start-server-and-test": "^1.10.6",
-    "stylelint": "^12.0.1",
+    "sass-loader": "^8.0.2",
+    "start-server-and-test": "^1.10.8",
+    "stylelint": "^13.1.0",
     "stylelint-order": "^4.0.0",
-    "ts-jest": "^24.3.0",
+    "ts-jest": "^25.2.0",
     "vue-jest": "^4.0.0-0",
-    "vuepress": "^1.2.0"
+    "vuepress": "^1.3.0"
   },
   "engines": {
     "node": "~12.13.0",
