--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
-  "author": "Niko Pettersen <niko.pettersen@newthings.co> (https://www.newthings.co)",
+  "author": "Niko Pettersen",
   "dependencies": {
-    "@nuxtjs/axios": "^5.9.5",
+    "@nuxtjs/axios": "^5.9.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "nuxt": "^2.11.0"
+    "nuxt": "^2.12.1"
   },
   "description": "Nuxt.js build with TypeScript and TSX support",
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^4.1.1",
-    "@nuxt/typescript-build": "^0.5.6",
+    "@cypress/webpack-preprocessor": "^4.1.3",
+    "@nuxt/typescript-build": "^0.6.1",
     "@nuxtjs/eslint-config": "^2.0.2",
     "@nuxtjs/eslint-config-typescript": "^1.0.2",
     "@nuxtjs/eslint-module": "^1.1.0",
     "@nuxtjs/stylelint-module": "^3.2.2",
-    "@types/jest": "^25.1.2",
-    "@vue/babel-preset-app": "^4.2.2",
-    "@vue/composition-api": "^0.3.4",
+    "@types/jest": "^25.1.4",
+    "@vue/babel-preset-app": "^4.2.3",
+    "@vue/composition-api": "^0.5.0",
     "@vue/test-utils": "^1.0.0-beta.31",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^25.1.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.2.4",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-preset-vca-jsx": "^0.3.4",
-    "cypress": "^4.0.1",
+    "cypress": "^4.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-cypress": "^2.9.0",
-    "eslint-plugin-jest": "^23.7.0",
-    "eslint-plugin-json": "^2.0.1",
-    "eslint-plugin-nuxt": ">=0.5.1",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-json": "^2.1.1",
+    "eslint-plugin-nuxt": ">=0.5.2",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.3",
-    "jest": "^25.1.0",
+    "jest": "^25.2.4",
     "jest-serializer-vue": "^2.0.2",
-    "jsdom": "^16.1.0",
+    "jsdom": "^16.2.2",
     "jsdom-global": "^3.0.2",
-    "lint-staged": "^10.0.7",
+    "lint-staged": "^10.1.0",
     "node-sass": "^4.13.1",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.2",
     "sass-loader": "^8.0.2",
-    "start-server-and-test": "^1.10.8",
-    "stylelint": "^13.1.0",
+    "start-server-and-test": "^1.10.11",
+    "stylelint": "^13.2.1",
     "stylelint-order": "^4.0.0",
-    "ts-jest": "^25.2.0",
+    "ts-jest": "^25.3.0",
     "vue-jest": "^4.0.0-0",
-    "vuepress": "^1.3.0"
+    "vuepress": "^1.4.0"
   },
   "engines": {
     "node": "~12.13.0",
-    "npm": "~6.13.0"
+    "npm": "~6.14.0"
   },
   "husky": {
     "hooks": {
@@ -62,6 +62,9 @@
   "license": "MIT",
   "name": "nuxt-tsx",
   "private": true,
+  "resolutions": {
+    "minimist": "^1.2.5"
+  },
   "scripts": {
     "build": "nuxt build",
     "cypress:ci": "CYPRESS_CI=true cypress run --config-file .cypress.json --config video=false",
@@ -81,5 +84,5 @@
     "test:update": "npm run test:unit -- -u",
     "test": "npm run test:unit && npm run test:e2e"
   },
-  "version": "1.0.0"
+  "version": "1.0.2"
 }
