--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
+    "outDir": "./temp",
     "paths": {
       "@/*": ["./*"]
     },
