--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run test:unit",
+      "pre-commit": "lint-staged",
       "pre-push": "npm run test:ci"
     }
   },
