chore(sass): Switch to `dart` engine

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "jsdom": "^16.2.2",
     "jsdom-global": "^3.0.2",
     "lint-staged": "^10.1.1",
-    "node-sass": "^4.13.1",
     "prettier": "^2.0.2",
+    "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "start-server-and-test": "^1.10.11",
     "stylelint": "^13.2.1",
