--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-jest": "^25.2.6",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-preset-vca-jsx": "^0.3.4",
+    "canvas": "^2.6.1",
     "cypress": "^4.3.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
@@ -42,7 +43,7 @@
     "start-server-and-test": "^1.10.11",
     "stylelint": "^13.2.1",
     "stylelint-order": "^4.0.0",
-    "ts-jest": "^25.3.0",
+    "ts-jest": "^25.3.1",
     "vue-jest": "^4.0.0-0",
     "vuepress": "^1.4.0"
   },
