--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
   "author": "Niko Pettersen",
   "dependencies": {
-    "@nuxtjs/axios": "^5.9.7",
+    "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "nuxt": "^2.12.2"
   },
   "description": "Nuxt.js build with TypeScript and TSX support",
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^5.0.0",
-    "@nuxt/typescript-build": "^0.6.2",
-    "@nuxtjs/eslint-config": "^2.0.2",
-    "@nuxtjs/eslint-config-typescript": "^1.0.2",
-    "@nuxtjs/eslint-module": "^1.1.0",
-    "@nuxtjs/stylelint-module": "^3.2.2",
-    "@types/jest": "^25.2.1",
-    "@vue/babel-preset-app": "^4.3.0",
-    "@vue/composition-api": "^0.5.0",
-    "@vue/test-utils": "^1.0.0-beta.31",
+    "@cypress/webpack-preprocessor": "^5.4.1",
+    "@nuxt/typescript-build": "^1.0.3",
+    "@nuxtjs/eslint-config": "^3.0.0",
+    "@nuxtjs/eslint-config-typescript": "^2.0.0",
+    "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/stylelint-module": "^4.0.0",
+    "@types/jest": "^26.0.0",
+    "@vue/babel-preset-app": "^4.4.4",
+    "@vue/composition-api": "^0.6.3",
+    "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.2.6",
+    "babel-jest": "^26.0.1",
     "babel-plugin-istanbul": "^6.0.0",
-    "babel-preset-vca-jsx": "^0.3.4",
+    "babel-preset-vca-jsx": "^0.3.5",
     "canvas": "^2.6.1",
-    "cypress": "^4.3.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-jest": "^23.8.2",
+    "cypress": "^4.8.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-cypress": "^2.11.1",
+    "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-json": "^2.1.1",
-    "eslint-plugin-nuxt": ">=0.5.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^4.2.3",
-    "jest": "^25.2.7",
+    "eslint-plugin-nuxt": ">=1.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
     "jest-serializer-vue": "^2.0.2",
     "jsdom": "^16.2.2",
     "jsdom-global": "^3.0.2",
-    "lint-staged": "^10.1.2",
-    "prettier": "^2.0.4",
-    "sass": "^1.26.3",
+    "lint-staged": "^10.2.10",
+    "prettier": "^2.0.5",
+    "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
-    "start-server-and-test": "^1.10.11",
-    "stylelint": "^13.3.0",
-    "stylelint-order": "^4.0.0",
-    "ts-jest": "^25.3.1",
+    "start-server-and-test": "^1.11.0",
+    "stylelint": "^13.6.0",
+    "stylelint-order": "^4.1.0",
+    "ts-jest": "^26.1.0",
     "vue-jest": "^4.0.0-0",
-    "vuepress": "^1.4.0"
+    "vuepress": "^1.5.2"
   },
   "engines": {
-    "node": "~12.13.0",
+    "node": "~14.2.0",
     "npm": "~6.14.0"
   },
   "license": "MIT",
