--- a/package.json
+++ b/package.json
@@ -1,55 +1,56 @@
 {
   "author": "Niko Pettersen",
   "dependencies": {
-    "@nuxtjs/axios": "^5.11.0",
+    "@nuxtjs/axios": "^5.13.0",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "nuxt": "^2.12.2"
+    "@nuxtjs/pwa": "^3.3.5",
+    "nuxt": "^2.14.12"
   },
   "description": "Nuxt.js build with TypeScript and TSX support",
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^5.4.1",
-    "@nuxt/typescript-build": "^1.0.3",
-    "@nuxtjs/eslint-config": "^3.0.0",
-    "@nuxtjs/eslint-config-typescript": "^2.0.0",
-    "@nuxtjs/eslint-module": "^2.0.0",
+    "@cypress/webpack-preprocessor": "^5.5.0",
+    "@nuxt/types": "^2.14.12",
+    "@nuxt/typescript-build": "^2.0.4",
+    "@nuxtjs/eslint-config": "^5.0.0",
+    "@nuxtjs/eslint-config-typescript": "^5.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
-    "@types/jest": "^26.0.0",
-    "@vue/babel-preset-app": "^4.4.4",
-    "@vue/composition-api": "^0.6.3",
-    "@vue/test-utils": "^1.0.3",
+    "@types/jest": "^26.0.20",
+    "@vue/babel-preset-app": "^4.5.11",
+    "@vue/composition-api": "^0.6.7",
+    "@vue/test-utils": "^1.1.3",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.0.1",
+    "babel-jest": "^26.6.3",
     "babel-plugin-istanbul": "^6.0.0",
-    "babel-preset-vca-jsx": "^0.3.5",
+    "babel-preset-vca-jsx": "^0.3.6",
     "canvas": "^2.6.1",
-    "cypress": "^4.8.0",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-cypress": "^2.11.1",
-    "eslint-plugin-jest": "^23.13.2",
-    "eslint-plugin-json": "^2.1.1",
-    "eslint-plugin-nuxt": ">=1.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.2.5",
-    "jest": "^26.0.1",
+    "cypress": "^6.4.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-json": "^2.1.2",
+    "eslint-plugin-nuxt": ">=2.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^4.3.8",
+    "jest": "^26.6.3",
     "jest-serializer-vue": "^2.0.2",
-    "jsdom": "^16.2.2",
+    "jsdom": "^16.4.0",
     "jsdom-global": "^3.0.2",
-    "lint-staged": "^10.2.10",
-    "prettier": "^2.0.5",
-    "sass": "^1.26.8",
-    "sass-loader": "^8.0.2",
-    "start-server-and-test": "^1.11.0",
-    "stylelint": "^13.6.0",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
+    "sass": "^1.32.6",
+    "sass-loader": "^10.1.1",
+    "start-server-and-test": "^1.12.0",
+    "stylelint": "^13.9.0",
     "stylelint-order": "^4.1.0",
-    "ts-jest": "^26.1.0",
+    "ts-jest": "^26.5.0",
     "vue-jest": "^4.0.0-0",
-    "vuepress": "^1.5.2"
+    "vuepress": "^1.8.0"
   },
   "engines": {
-    "node": "~14.2.0",
-    "npm": "~6.14.0"
+    "node": "~14.8.0",
+    "npm": "~7.52.0"
   },
   "license": "MIT",
   "lint-staged": {
@@ -69,17 +70,17 @@
     "docs:deploy": "./scripts/deploy-docs.sh",
     "docs:dev": "vuepress dev docs",
     "generate": "nuxt generate",
+    "lint": "npm run lint:css && npm run lint:source",
     "lint:css": "stylelint --ignore-path .gitignore '**/*.scss'",
+    "lint:fix": "npm run lint:fix:css && npm run lint:fix:source",
     "lint:fix:css": "stylelint --ignore-path .gitignore --fix '**/*.scss'",
     "lint:fix:source": "eslint --ext .js,.json,.ts,.tsx --fix --ignore-path .gitignore .",
-    "lint:fix": "npm run lint:fix:css && npm run lint:fix:source",
     "lint:source": "eslint --ext .js,.json,.ts,.tsx --ignore-path .gitignore .",
-    "lint": "npm run lint:css && npm run lint:source",
     "postinstall": "scripts/postinstall.sh",
     "start": "nuxt start",
+    "test": "npm run test:unit && npm run test:e2e",
     "test:ci": "jest && nuxt generate && start-test start 3000 cypress:ci",
     "test:e2e": "nuxt generate && start-test start 3000 cypress:run",
-    "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "jest --coverage",
     "test:update": "npm run test:unit -- -u"
   },
