--- a/.github/workflows/nuxt.tsx.yml
+++ b/.github/workflows/nuxt.tsx.yml
@@ -5,17 +5,17 @@ jobs:
     name: Run tests
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v1
-    - name: Install Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
-    - name: Install dependencies
-      run: npm install
-    - name: Lint files
-      run: npm run lint
-    - name: Run tests
-      run: npm run test:ci
-      env:
-        CI: true
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - name: Install dependencies
+        run: npm install
+      - name: Lint files
+        run: npm run lint
+      - name: Run tests
+        run: npm run test:ci
+        env:
+          CI: true
